fix(download-icon): lock icon beside download or delete text (#369)
Download or delete icon is separated from download text when
the filename becomes too long.

Locks the text to the download or delete icon regardless of
the filename's length.

[Fixes #155210258]

--- a/src/app/modules/request-pool/session-details/session-details.component.scss
+++ b/src/app/modules/request-pool/session-details/session-details.component.scss
@@ -13,7 +13,9 @@
 .wrapper {
   padding: 90px 90px 90px 120px;
 }
-
+.icon {
+  display: inline-block;
+}
 .header {
   position: fixed;
   width: 90%;
